--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-add-calendar-event": "^0.3.0",
     "react-native-calendars": "^1.17.1",
     "react-native-chooser": "^1.7.0",
+    "react-native-datepicker": "^1.7.1",
     "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-simple-picker": "^1.4.3",
     "react-native-vector-icons": "^4.4.3",
